
	* gc.c: Fixes warning: passing argument 1 of 'add_freelist' makes pointer from integer without a cast

	* node.h: Remove surplus comma

	* ext/socket/extconf.rb: Corrected function definitions to specify return values.

	* lib/date.rb: Removed private on to_date and to_datetime 

	* configure.in: Little fixes for x64 libdir/sitedir.

Mon Jun  8 12:46:00 2009  Kirk Haines <khaines@ruby-lang.org>

	* lib/soap/mimemessage.rb: Fixed a typo -- conent -> content

	* ext/bigdecimal/bigdecimal.c: Backported a number of bug fixes
	  dealing with large input to BigDecimal.new causing segfaults.

Thu Mar 31 18:18:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (mkintpath): new function which converts native path
	  to format acceptable in Makefile.

	* lib/mkmf.rb (configuration): leaves PATH_SEPARATOR unchanged.

	* lib/mkmf.rb (configuration): convers srcdir, topdir and hdrdir.
	  a patch by Alexey Borzenkov <snaury AT gmail.com> at
	  [ruby-core:21448].

Fri Mar 27 19:12:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (run_final): frees zombies only.  [ruby-dev:38171]

Fri Mar 27 19:12:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_gc_call_finalizer_at_exit): leave Thread objects
	  unfinalized.  [ruby-dev:38168]

Fri Mar 27 19:12:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (run_final): calls free function.  [ruby-core:22578]

Mon Mar 23 19:00:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/thread/thread.c (rb_queue_pop, rb_queue_push): should not lock
	  mutex if got an exception while waiting, and should ensure unlocked
	  after signaled.  [ruby-dev:37545]

Mon Mar 23 18:12:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_value): missed to change at r17874.  [ruby-core:17595]

Mon Mar 23 18:12:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_join): new API.

	* ext/thread/thread.c (wait_mutex, lock_mutex): wait until the locking
	  thread exits.  [ruby-dev:34856]
