@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2009-06-08"
 #define RUBY_VERSION_CODE 186
 #define RUBY_RELEASE_CODE 20090608
-#define RUBY_PATCHLEVEL 375
+#define RUBY_PATCHLEVEL 376
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
